# dj-cashier

./: CONTRIBUTING.rst  HISTORY.rst  tox.ini
.circleci/: config.yml
.github/: ISSUE_TEMPLATE.md
docs/: .readthedocs.yaml  conf.py  index.rst  installation.rst  usage.rst
example/: README.md  pyproject.toml
example/example/: settings.py  urls.py
example/templates/dj_cashier/: base.html
tests/: settings.py  test_models.py  urls.py
