[tool.poetry]
name = "example"
version = "0.1.0"
description = "An example project with your Django Cashier app."
authors = ["Kaleem ibn Anwar <kaleemibnanwar@gmail.com>"]

[tool.poetry.dependencies]
python = "*"
django = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
